--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="apps mt-44 w-[100%] flex justify-evenly items-center mx-auto">
               <div class="android flex w-[446px] h-[320px] flex-col items-center">
                   <div class="bg-[#EA4335] w-[260px] h-2"></div>
-                  <div class=" bg-[#FFF] flex flex-col items-center w-[400px] h-[270px] rounded-3xl shadow-2xl shadow-[#686666] mt-2">
+                  <div class="box bg-[#FFF] flex flex-col items-center w-[400px] h-[270px] rounded-3xl shadow-2xl shadow-[#686666] mt-2">
                       <img src="./images/27993998.png" alt="" class="w-[ 14.1875rem] h-[ 14.1875rem] mt-[-30px]">
                       <h1 class="mt-[-38px]">Android</h1>
                       <img src="./images/arraows.svg" alt="" class="mt-6">
@@ -199,7 +199,7 @@
 
               <div class="flutter flex w-[446px] h-[320px] flex-col items-center">
                   <div class="bg-[#4285F4] w-[260px] h-2"></div>
-                  <div class=" bg-[#FFF] flex flex-col items-center w-[400px] h-[270px] rounded-3xl shadow-2xl shadow-[#686666] mt-2 justify-center">
+                  <div class="box bg-[#FFF] flex flex-col items-center w-[400px] h-[270px] rounded-3xl shadow-2xl shadow-[#686666] mt-2 justify-center">
                       <img src="./images/27994001.png" alt="" class="w-[ 14.1875rem] h-[ 14.1875rem] mt-[-10px]">
                       <h1 class="mt-5">Flutter</h1>
                       <img src="./images/arraows.svg" alt="" class="mt-9">
@@ -208,7 +208,7 @@
 
               <div class="cloud flex w-[446px] h-[320px] flex-col items-center">
                   <div class="bg-[#34A853] w-[260px] h-2"></div>
-                  <div class=" bg-[#FFF] flex flex-col items-center w-[400px] h-[270px] rounded-3xl shadow-2xl shadow-[#686666] mt-2 justify-center">
+                  <div class="box bg-[#FFF] flex flex-col items-center w-[400px] h-[270px] rounded-3xl shadow-2xl shadow-[#686666] mt-2 justify-center">
                       <img src="./images/27993999.png" alt="" class="w-[ 14.1875rem] h-[ 14.1875rem] mt-[-10px]">
                       <h1>Cloud</h1>
                       <img src="./images/arraows.svg" alt="" class="mt-3">
