--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Vite App</title>
+    <title>GDSC | RCOEM Chapter</title>
   </head>
   <body>
     <div id="wrapper" class="overflow-x-hidden">
